--- a/client/my-app/src/pages/Detail.html
+++ b/client/my-app/src/pages/Detail.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="Details.css" />
-    <title>Document</title>
+    <title>HTML VERSION</title>
   </head>
  
   <body>
-    <div class="blur-background"></div>
+    <img class="blur-background" src="https://image.tmdb.org/t/p/w500/72X2ioyVK2l7c2Graf4H0kuCp9O.jpg"></img>
     <div class="main-container">
-      <div class="poster"></div>
+      <img class="poster" src="https://image.tmdb.org/t/p/w500/72X2ioyVK2l7c2Graf4H0kuCp9O.jpg"></img>
       <div class="info-container">
       <div class="except-cast">
           <div class="first-row">
@@ -57,21 +57,6 @@
             <div class="artist-photo"></div>
             <p class="artist-name">Some Actor</p>  
           </div>
-          <!-- <div class="artist">
-            <div class="artist-photo"></div>
-            <p class="artist-name">Some Actor</p>
-
-          </div>
-          <div class="artist">
-            <div class="artist-photo"></div>
-            <p class="artist-name">Some Actor</p>
-
-          </div>
-          <div class="artist">
-            <div class="artist-photo"></div>
-            <p class="artist-name">Some Actor</p>
-
-          </div> -->
         
         </div>
       </div>
