--- a/client/my-app/src/pages/Detail.html
+++ b/client/my-app/src/pages/Detail.html
@@ -15,7 +15,7 @@
       <div class="info-container">
       <div class="except-cast">
           <div class="first-row">
-            <p class="title">Greta</p>
+            <input class="title">Greta</input>
             <!-- FONT SIZE 44 -->
             <div class="buttons">
               <div class="edit-btn">Edit</div>
